# ffbc-auth

./: .gitignore  docker-compose.yml
users/: Dockerfile  pyproject.toml
users/migrations/: env.py
users/migrations/versions/: 228071870c45_create_user_and_outstandingtoken_models.py  52b8a7f18ef5_update_user_model.py  bdd884eb3e67_create_blacklisttoken_model.py
users/src/: constants.py  dependencies.py  enums.py  main.py  services.py  tasks.py
users/src/core/: base_service.py  celery.py  config.py  security.py
users/src/db/: __init__.py  base.py  base_class.py  db.py
users/src/models/: __init__.py  token.py  user.py
users/src/routes/: __init__.py  auth.py
users/src/schemas/: __init__.py  token.py  user.py
users/src/token/: decoder.py  encoder.py
users/src/utils/: __init__.py  file.py  phone_validation.py  url_validation.py
